@@ -1,3 +1,9 @@
+2007-05-03 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b61
+
+ * Fix: Little Typo
+
+ * Change: use @ before mkdir in platform/*
+
 2007-05-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b60
 
  * "Fix": Lots of phpdoc adds, indenting and gTranslate() 
